--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-7.99MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.10MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-567.4KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇨🇳 中国-5.70MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.10MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-654.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.10MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇸🇬 新加坡-567.4KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇬🇧 英国-567.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-475.2KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.99MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.03MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
