--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-405.6KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-4.20MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 捷克-247.3KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇭🇰 香港-3.65MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-9.99MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: 192.74.242.182, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/170419111021, ws-headers: {Host: 192.74.242.182}}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.85MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 捷克-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
